# opthub-client

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  README_ja.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  trials_test_trials.json
.github/: dependabot.yml
.github/workflows/actions/poetry_publish/: action.yml
opthub_client/: __init__.py  api.py  auth.py  file_io.py  help.py  history.py  model.py  opt.py  select.py  select_prompt.py  submit.py  util.py  webclient.py
opthub_client/context/: cipher_suite.py  credentials.py  match_selection.py  read_version.py  utils.py  version.py
opthub_client/controllers/: auth.py  create.py  create_api_key.py  download.py  help.py  history.py  login.py  logout.py  select.py  show.py  show_trial.py  show_trials.py  submit.py  utils.py
opthub_client/errors/: authentication_error.py  cache_io_error.py  fetch_error.py  graphql_error.py  mutation_error.py  query_error.py  user_input_error.py
opthub_client/graphql/: auth_client_test.py  client.py  version_cli.py
opthub_client/models/: api_key.py  competition.py  evaluation.py  match.py  remote_message.py  score.py  solution.py  trial.py
opthub_client/validators/: solution.py
opthub_client/view/: display_trials.py
src/: __init__.py  opt.py
src/context/: match_selection.py
src/controllers/: auth.py  help.py  history.py  select.py  submit.py
src/models/: competition.py  evaluation.py  match.py  score.py  solution.py  trial.py
src/validators/: solution.py  solution_validator.py
tests/api/: _common.py  get_trial_test.py  submit_test.py
