[tool.poetry]
name = "opthub_client"
version = "0.1.0"
description = ""
authors = ["OptHub Inc. <dev@opthub.ai>"]
readme = "README.md"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["ALL"]
ignore = [
    "ANN101",   # Don't require type hints for self.
    "D104",     # Don't require docstrings for public packages.
    "RET504",   # Allow assignment before return
    "FBT001",   # Allow bool type positional arguments
    "TD002",    # Allow unassigned todos
    "TD003",    # Allow todos without issue
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.poetry.dependencies]
python = "3.12.1"
click = "^8.1.7"
prompt-toolkit = "^3.0.43"
inquirerpy = "^0.3.4"
gql = "^3.5.0"
aiohttp = "^3.9.3"
boto3 = "^1.34"
boto3-stubs = {extras=["dynmodb","cognito"], version="^1.34"}
[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"
pytest = "^8.2.0"
jwt = "^1.3.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"





[tool.poetry.scripts]
opt = "opthub_client.opt:opt"
