[options.entry_points]
console_scripts =
  opt = src.opt:opt
[options]
zip_safe = false
packages = find:
include_package_data=true
python_requires = >=3.6
setup_requires =
  setuptools >= 30.3.0
  pytest-runner
install_requires =
  setuptools >= 30.3.0
  click >= 8.1.6
  inquirerpy >= 0.3.4
  pfzy >=0.3.1
  prompt-toolkit >=3.0.1
  setuptools >= 21.0.0
  wcwidth >= 0.2.13
  gql[all] >= 3.0.0